--- a/poc-kafka/docker-compose.yml
+++ b/poc-kafka/docker-compose.yml
@@ -21,6 +21,17 @@ services:
       KAFKA_CREATE_TOPICS: "baeldung:1:1"
     networks:
       - kafka-net
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    depends_on:
+      - kafka
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+    networks:
+      - kafka-net
 networks:
   kafka-net:
     driver: bridge
