update redis version

--- a/mac/redis/docker-compose.yml
+++ b/mac/redis/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   redis:
     container_name: redis
-    image: bitnami/redis:latest
+    image: bitnami/redis:6.2.14
     environment:
       - REDIS_PASSWORD=password
     ports:
